[package]
name = "rs-zip-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.11", features = ["stream"] }
tempfile = "^3.3.0"
futures-util = "*"
zip = "^0.6.2"
tokio = {version = "1", features = ["full"] }
